--- a/chrono.html
+++ b/chrono.html
@@ -72,7 +72,7 @@
 		}
 	</style>
 	<div>
-		<label class="form_col" for="chrono">Chronomètre :</label>
+		<label class="form_col" for="chrono">StopWatch :</label>
 	</div>
 </head>
 
@@ -88,7 +88,7 @@
 	<br />
 	<div id="enter_bis">
 		<div class="diveffet" id="div" type="text">
-			<input class="affichage" name="seconde" id="seconde" type="text" />secondes <span id="avert_s" class="tooltip"></span>
+			<input class="affichage" name="seconde" id="seconde" type="text" />seconds <span id="avert_s" class="tooltip"></span>
 		</div>
 	</div>
 	<br />
