--- a/countdown.html
+++ b/countdown.html
@@ -72,7 +72,7 @@
 	<br />
 	<br />
 	<br />
-	<input class="affichage items" tabIndex="1" id="seconde" type="number" />secondes <span id="avert_s" class="tooltip"></span>
+	<input class="affichage items" tabIndex="1" id="seconde" type="number" />seconds <span id="avert_s" class="tooltip"></span>
 	<br />
 	<br />
 	<br />
