--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 <body>
 	<div class="lab">
 		<div id="chrono">
-			<input class="form items" tabIndex="0" type="submit" for="chrono" value="Chrono" />
+			<input class="form items" tabIndex="0" type="submit" for="chrono" value="StopWatch" />
 		</div>
 		<br />
 		<br />
 		<div id="compte_a_rebourd">
-			<input class="form items" tabIndex="1" for="chrono" type="submit" value="Compte a rebourd" />
+			<input class="form items" tabIndex="1" for="chrono" type="submit" value="CountDown" />
 		</div>
 	</div>
 	<p id="message"></p>
